styles/about.css
main h1 {
  padding: 30px 150px 10px;
  color: var(--color-sub-3);
  font-style: italic;
}

.about-academy {
  padding: 0 5vw 3vw;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.vdo-credit {
  flex-direction: column;
}

.about-academy img,
.about-academy video {
  width: 30rem;
  border-radius: 10px;
  display: flex;
  border-radius: 20px;
  background-color: var(--color-sub-1);
  padding: 15px;
}

.about-academy-media {
  padding: 15px 20px 0;
  justify-items: center;
}

.vdo-credit {
  padding: 0.5em 4em;
  color: var(--color-sub-3);
  font-size: 12px;
}

.vdo-credit a {
  text-decoration: none;
  color: var(--color-sub-3);
}

.vdo-credit a:hover {
  text-decoration: underline;
}

.about-paragraph p {
  width: 40vw;
  font-size: 1em;
  line-height: 1.8;
  padding: 1em;
  text-align: left;
  color: #444444;
}


.about-founder {
  padding: 3vw 20vw;
  line-height: 1.8;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: #444444;
}

.about-founder img {
  background: #1b447f;
  border-radius: 100%;
  padding: 1em;
  width: 13em;
}

.about-founder h2 {
  font-size: 2em;
}

.about-founder h3 {
  font-size: 1.5em;
  font-weight: lighter;
  margin-top: -15px;
}

.about-founder p {
  font-size: 1em;
  margin-top: 10px;
}

.hr {
  border: 0.1em solid #ecb722;
  margin: 1em 10em 2em;
}

@media (max-width: 1265px) {
  .about-academy {
    padding: 3vw 5vw 3vw;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
  }

  .about-academy img,
  .about-academy video {
    width: 50vw;
    border-radius: 10px;
  }

  .about-academy p {
    width: 80vw;
    font-size: 0.9em;
    line-height: 1.8;
    padding: 2em 2em 0;
    text-align: center;
    color: #444444;
  }
}

@media (max-width: 1000px) {
  main h1 {
    padding: 50px 50px 30px;
    color: var(--color-sub-3);
    font-style: italic;
  }

  .hr {
    border: 0.1em solid #ecb722;
    margin: 1em 5em;
  }

  .about-founder img {
    background: #1b447f;
    border-radius: 100%;
    padding: 1em;
    width: 10em;
  }

  .about-founder h2 {
    font-size: 2em;
  }

  .about-founder h3 {
    font-size: 1.5em;
    font-weight: lighter;
  }

  .about-founder p {
    width: 80vw;
    font-size: 0.9em;
    margin-top: 10px;
  }
}

@media (max-width: 900px) {
  .about-academy img,
  .about-academy video {
    width: 70vw;
    border-radius: 10px;
  }
}

